Incluir Token en la petición, usuarios y roles

--- a/Api.OrdenarFinanzas/appsettings.json
+++ b/Api.OrdenarFinanzas/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "TestClaveAppMobile",
+    "ExpirationMinutes": 10
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
